@@ -5,8 +5,10 @@
  Changes between 0.9.6 and 0.9.7  [xx XXX 2000]
 
   *) Fix for bug in DirectoryString mask setting. Add support for
-     X509_NAME_print_ex() in 'req' and initial X509_print_ex() function
-     to allow certificate printing to more controllable.
+     X509_NAME_print_ex() in 'req' and X509_print_ex() function
+     to allow certificate printing to more controllable, additional
+     'certopt' option to 'x509' to allow new printing options to be
+     set.
      [Steve Henson]
 
   *) Clean old EAY MD5 hack from e_os.h.
